<resources>
    <string name="app_name">함께가요</string>
    <string name="google_maps_key">AIzaSyD33CZy68KFJnxEYrverS9pZ6MwsrhVjgM</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--Login Activity -->
    <string name="action_library">오픈소스 라이브러리</string>
    <string name="toolbar_main_title">함께가요</string>
    <string name="email">이메일</string>
    <string name="password">비밀번호</string>
    <string name="sign_up">회원가입</string>
    <string name="sign_in">로그인</string>
    <string name="or">또는</string>
    <string name="facebook_login">페이스북으로 로그인</string>
    <string name="kakao_login">카카오톡으로 로그인</string>



    <string name="search_location_with_list">산책장소 목록으로 보기</string>
    <string name="search_location_with_map">산책장소 맵으로 보기</string>
    <string name="search_location_with_autoComplete">산책장소 검색으로 보기</string>
    <string name="pet_diary">산책일지</string>
        <string name="location_open_time">개방시간 : </string>
    <string name="location_address">주소 : </string>
    <string name="location_comment">장소 평가하기</string>
    <string name="location_freeboard">장소 게시판</string>
    <string name="location_title">Location</string>
    <string name="user_name">유저 이름</string>
    <string name="title_hint">제목을 입력해주세요.</string>
    <string name="title">제목 </string>
    <string name="content_hint">내용을 입력해주세요.</string>
    <string name="content">내용</string>
    <string name="zero_to_500">0/500</string>
    <string name="zero_to_200">%1$d / 200</string>
    <string name="add_picture">사진추가</string>
    <string name="location_freeboard_time_detail">time</string>
    <string name="location_freeboard_posted_time">작성시간 : </string>
    <string name="viewPager_picture_count">%1$d / %2$d</string>
    <string name="zero_to_five">%1$.1f / 5</string>
    <string name="zero_to_five_default"> -- </string>
    <string name="zero_to_five_base"> /  5.0</string>
    <string name="km">km</string>
    <string name="nickname">닉네임</string>
    <string name="picture">프로필 사진</string>
    <string name="sign_out">로그아웃</string>
    <string name="facebook_sign_in">페이스북으로 로그인</string>
    <string name="facebook_app_id">455350401493587</string>
    <string name="fb_login_protocol_scheme">fb455350401493587</string>
    <string name="facebook_login_permission_email">email</string>
    <string name="facebook_login_permission_public_profile">public_profile</string>

    <!--common String-->
    <string name="http">http://</string>

    <!--KaKao String-->
    <string name="kakao_app_key">c2bcdcf45c06c8b540f478de64736a39</string>
    <string name="kakao_scheme">kakaoc2bcdcf45c06c8b540f478de64736a39</string>
    <string name="kakaolink_host">kakaolink</string>
    <string name="kakao_sign_in">카카오톡으로 로그인</string>
    <string name="kakao_sign_up">가입하기</string>

   <!-- SharedPreference keys-->
    <string name="facebookSharedPreferences">FacebookUserDataCheck</string>
    <string name="facebookDataSendCheck">FacebookDataSendCheck</string>
    <string name="kakakoSharedPreferences">KaKaoUserDataCheck</string>
    <string name="kakaoDataSendCheck">KaKaoDataSendCheck</string>

    <!--LocationActivity-->
    <string name="location_activity_title">장소</string>


    <!--LocationCommentActivity-->
    <string name="location_comment_activity_title">유저평가</string>


    <!--LocationCommentAddActivity-->
    <string name="location_comment_add_activity_title">유저평가등록</string>


    <!--LocationFreeboardActivity-->
    <string name="location_freeboard_activity_title">장소 게시판</string>
    <string name="zero">0</string>


    <!--LocationFreeboardAddActivity-->
    <string name="location_freeboard_add_activity_title">장소 게시판 글작성</string>

    <!--LocationFreeboardSelectActivity-->
    <string name="location_freeboard_select_activity_title">장소 게시판</string>
    <string name="location_freeboard_comment">댓글:%1$d개</string>
    <string name="location_freeboard_comment_base">댓글0개</string>
    <string name="show_all_comment">모든 댓글 보러가기</string>

    <!--OnBackPressedDialog-->
    <string name="finish_prefer">종료하시겠습니까?</string>
    <string name="finish_yes">예</string>
    <string name="finish_no">아니요</string>

    <!--optionItemLogout-->
    <string name="logout_prefer">로그아웃 하시겠습니까?</string>
    <string name="logout_yes">예</string>
    <string name="logout_no">아니요</string>

    <!--MapActivity-->
    <string name="location_intent_key">locationData</string>
    <string name="location_search">장소를 검색하려면 누르세요</string>
    <string name="locatoin_next_button">이동</string>
    <string name="location_name">장소명</string>
    <string name="no_location">장소가 없습니다.</string>

    <!--MainActivity-->
    <string name="location_search_detail">직접 주변장소 검색하여 찾기</string>
    <string name="recent_review">최신 장소 리뷰</string>
    <string name="recent_freeboard">최신 장소 게시글</string>
    <string name="location_search_list">리스트로 장소 찾기</string>
    <string name="location_search_map">지도로 장소 찾기</string>
    <string name="diary_post">산책일지 쓰러가기</string>

    <!--WalkDiaryActivity-->
    <string name="walk_start">산책 시작!</string>
    <string name="walk_stop">산책 끝!</string>
    <string name="walk_diary_time">시간</string>
    <string name="walk_diary_cancel">취소</string>
    <string name="walk_diary_add">등록</string>
    <string name="walk_diary_confirm">확인</string>
    <string name="walk_diary_add_dialog_title">산책일지 작성</string>
    <string name="walk_diary_map_info">이동경로를 그리고 있습니다.</string>
    <string name="walk_diary_map_info2">다른 앱을 쓰셔도 되고 산책에 집중하셔도 됩니다.</string>
    <string name="walk_diary_map_info3">산책 종료시 꼭! 산책 끝 버튼을 눌러주세요</string>
    <string name="walk_diary_add_success">산책일지 등록 성공</string>
    <string name="walk_diary_time_walking_time">산책한 시간</string>
    <string name="walk_diary_distance">이동한 거리</string>
    <string name="walk_diary_walking_time_format">%1$d시간 %2$d분 %3$d초</string>
    <string name="walk_diary_walking_distance_format">%1$.1f km</string>
    <string name="walk_diary_time_title_format">yyyy-MM-dd , HH시 mm분의 산책</string>
    <string name="walk_diary_content">산책일지</string>
    <string name="walk_diary_content_hint">산책일지를 작성해주세요</string>

    <!--NoDataFragment-->
    <string name="no_data">데이터가 없습니다. 등록해주세요.</string>
    <string name="no_location_comment">장소리뷰가 없습니다. 등록해주세요</string>
    <string name="no_freeboard">게시글이 없습니다. 등록해주세요.</string>
    <string name="no_walk_diary">산책일지가 없습니다. 등록해주세요.</string>
    <string name="no_location_list">주변에 장소가 없습니다.</string>
    <string name="no_comment">댓글이 없습니다. 등록해주세요</string>

    <!--location_freeboard_comment-->
    <string name="submit">등록</string>
    <string name="location_freeboard_comment_title">댓글</string>
    <string name="comment_submit_time">yyyy-MM-dd , HH시 mm분</string>

    <!--location_list_top_recycler-->
    <string name="location_top_near">거리순</string>
    <string name="location_top_fav">인기순</string>
    <string name="location_top_animal">반려동물 순</string>
    <string name="etc">기타</string>


</resources>
