<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_diary"
            android:icon="@drawable/dog_title"
            android:title="@string/pet_diary"

            />

        <item
            android:id="@+id/nav_location_list"
            android:icon="@mipmap/ic_search"
            android:title="@string/search_location_with_list" />
        <item
            android:id="@+id/nav_location_map"
            android:icon="@mipmap/ic_search"
            android:title="@string/search_location_with_map" />
        <item
            android:id="@+id/nav_location_auto"
            android:icon="@mipmap/ic_search"
            android:title="@string/search_location_with_autoComplete" />

    </group>

    </menu>
