<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp">
    <TextView
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/walk_diary_map_info"
        android:gravity="center"
        android:layout_gravity="center"
        android:textSize="16sp"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/walk_diary_map_info2"
        android:gravity="center"
        android:layout_gravity="center"
        android:textSize="16sp"
        android:layout_marginBottom="16dp"/>
    <TextView
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/walk_diary_map_info3"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"
        android:textSize="16sp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/walk_diary_info_confirm_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/walk_diary_confirm"
        android:background="@color/transparent"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        android:textStyle="bold"/>

</LinearLayout>