<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    >

    <android.support.v7.widget.CardView
        android:id="@+id/location_recent_comment_cardView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_border"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/location_recent_comment_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:maxLines="1"
                android:ellipsize="end"
                />
            <TextView
                android:id="@+id/location_recent_comment_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/location_address"
                android:maxLines="1"
                android:ellipsize="end"
                />

            <TextView
                android:id="@+id/location_recent_comment_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/content"
                android:maxLines="1"
                android:ellipsize="end"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/location_recent_comment_heart_imageView"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@mipmap/ic_heart"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp" />


                <TextView
                    android:id="@+id/location_recent_comment_heart_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/zero_to_five_default"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"/>

                <ImageView
                    android:id="@+id/location_recent_comment_pet_imageView"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@mipmap/ic_pet"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp" />

                <TextView
                    android:id="@+id/location_recent_comment_pet_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/zero_to_five_default"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginRight="8dp"/>

            </LinearLayout>

        </LinearLayout>





    </android.support.v7.widget.CardView>

</LinearLayout>