<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/walk_diary_add_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/walk_diary_add_dialog_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        android:textSize="25sp"
        android:textStyle="bold"
        />

    <ImageView
        android:id="@+id/walk_diary_add_map_move"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:src="@mipmap/ic_launcher_round"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/walk_diary_add_title"
        android:layout_marginTop="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:scaleType="centerCrop"/>

    <EditText
        android:id="@+id/walk_diary_add_editText"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/walk_diary_add_map_move"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:hint="@string/content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />



    <Button
        android:id="@+id/walk_diary_add_cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/walk_diary_cancel"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/walk_diary_add_editText"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/guideline_walk_diary_add"
        android:layout_marginRight="8dp"
        android:background="@color/colorPrimary"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/walk_diary_add_post_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/walk_diary_add"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/walk_diary_add_editText"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/guideline_walk_diary_add"
        android:background="@color/colorPrimary"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline_walk_diary_add"
        app:layout_constraintGuide_percent="0.5"
        android:orientation="vertical" />


</android.support.constraint.ConstraintLayout>