<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="16dp">

    <TextView
        android:id="@+id/location_list_top_near"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location_top_near"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginTop="12dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/location_list_top_view1"
      />

    <View
        android:id="@+id/location_list_top_view1"
        android:layout_width="2dp"
        android:layout_height="25dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.33"
     />

    <TextView
        android:id="@+id/location_list_top_fav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location_top_fav"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginTop="12dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/location_list_top_view1"
        app:layout_constraintRight_toLeftOf="@+id/location_list_top_view2"
       />


    <View
        android:id="@+id/location_list_top_view2"
        android:layout_width="2dp"
        android:layout_height="25dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.66"
        />

    <TextView
        android:id="@+id/location_list_top_animal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location_top_animal"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginTop="12dp"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/location_list_top_view2"
      />



</android.support.constraint.ConstraintLayout>