<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <ImageView
        android:id="@+id/location_imageView"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:scaleType="fitXY"
        android:layout_marginTop="?attr/actionBarSize"/>



        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/location_textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/location_title"
                    android:textSize="@dimen/location_title"
                    android:textStyle="bold"
                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">



                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginEnd="10dp"
                        android:scaleType="centerCrop"
                        android:src="@mipmap/ic_heart"
                        />

                    <TextView
                        android:id="@+id/location_favorite_score"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/zero_to_five_default"
                        android:layout_marginEnd="6dp"
                        android:layout_marginRight="6dp"
                        />

                    <TextView
                        android:id="@+id/location_favorite_score_base"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/zero_to_five_base"
                        />

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="20dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginEnd="10dp"
                        android:scaleType="centerCrop"
                        android:src="@mipmap/ic_pet"
                        />

                    <TextView
                        android:id="@+id/location_pet_score"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/zero_to_five_default"
                        android:layout_marginEnd="6dp"
                        android:layout_marginRight="6dp"
                        />
                    <TextView
                        android:id="@+id/location_pet_score_base"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/zero_to_five_base"
                        />

                </LinearLayout>


            </LinearLayout>

        </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_margin="16dp">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_gravity="center"

          >


            <TextView
                android:id="@+id/location_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location_address"
                android:layout_marginLeft="8dp"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginTop="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="7dp"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/location_address_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="서울시 동대문구 이문동"
                app:layout_constraintLeft_toRightOf="@+id/location_address"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="8dp"
                app:layout_constraintTop_toTopOf="parent" />


        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        >

        <Button
            android:id="@+id/location_button_location_freeboard"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/location_freeboard"
            android:textStyle="bold"
            android:background="@drawable/button_selector"
            android:layout_weight="1"
            android:layout_margin="16dp"


            />

        <Button
            android:id="@+id/location_button_location_comment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/location_comment"
            android:textStyle="bold"
            android:background="@drawable/button_selector"
            android:layout_weight="1"
            android:layout_margin="16dp"/>

    </LinearLayout>


</LinearLayout>