<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/location_freeboard_add_title_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="30dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="30dp" />

    <EditText
        android:id="@+id/location_freeboard_add_title_editText"
        android:layout_width="280dp"
        android:layout_height="0dp"
        app:layout_constraintLeft_toRightOf="@+id/location_freeboard_add_title_textView"
        android:layout_marginLeft="19dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="30dp"
        android:hint="@string/title"/>

    <TextView
        android:id="@+id/location_freeboard_add_content_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/content"
        android:textSize="20sp"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@+id/location_freeboard_add_title_editText"
        android:layout_marginLeft="30dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/location_freeboard_add_content_editText"
        android:layout_width="320dp"
        android:layout_height="250dp"
        android:hint="@string/content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/location_freeboard_add_content_textView"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/location_freeboard_add_picture_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_picture"
        android:textSize="20sp"
        android:layout_marginLeft="30dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/location_freeboard_add_content_editText" />

    <ImageView
        android:id="@+id/location_freeboard_add_picture_imageView"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:src="@mipmap/ic_add"
        app:layout_constraintLeft_toRightOf="@+id/location_freeboard_add_picture_textView"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/location_freeboard_add_content_editText" />



    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="등록"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />
</android.support.constraint.ConstraintLayout>